project/logs/20250709_143949.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

Object3d.VS.hlsl:22:21: error: no matching function for call to 'normalize'
    output.normal = normalize(mul(input.normal, (float32_t3x3) gTransformationMatrix.World));
                    ^~~~~~~~~
Object3d.VS.hlsl:22:21: note: candidate function not viable: no known conversion from 'matrix<float, 3, 3>' to 'vector<float, 3>' for 1st argument
    output.normal = normalize(mul(input.normal, (float32_t3x3) gTransformationMatrix.World));
                    ^         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

